<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/white"
	android:layout_width="match_parent"
	android:animateLayoutChanges="true"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:contentInsetStart="0dp"
		android:layout_marginStart="12dp"
		android:layout_marginEnd="12dp"
		app:layout_constraintStart_toStartOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:orientation="horizontal"
			android:background="@drawable/bg_white_rounded">

			<ImageView
				android:src="@drawable/ic_search_24"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="6dp"/>

			<EditText
				android:layout_weight="1"
				android:id="@+id/et_search"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@null"
				android:drawablePadding="8dp"
				android:inputType="text"
				android:maxLines="1"
				android:hint="@string/search"/>

			<ImageView
				android:id="@+id/iv_clear"
				android:src="@drawable/ic_close_24"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="gone"/>

		</LinearLayout>

	</androidx.appcompat.widget.Toolbar>

	<TextView
		android:id="@+id/tv_connection_unavailable"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/red"
		android:gravity="center"
		android:paddingTop="8dp"
		android:paddingBottom="8dp"
		android:text="@string/connection_unavailable"
		android:textColor="@color/white"
		android:textStyle="bold"
		android:visibility="gone"
		app:layout_constraintTop_toBottomOf="@id/toolbar" />

	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
		android:id="@+id/swipe_refresh"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@id/tv_connection_unavailable"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rv_users"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:clipToPadding="false"
			android:paddingBottom="12dp"
			tools:listitem="@layout/item_user" />

	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

	<TextView
		android:id="@+id/tv_empty"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="@style/TextAppearance.AppCompat.Title"
		android:textStyle="bold"
		android:textAllCaps="true"
		android:text="@string/no_users_found"
		android:textColor="@color/gray"
		android:visibility="gone"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<include layout="@layout/layout_list_placeholder"
		android:visibility="gone"/>

	<View
		android:id="@+id/toolbar_shadow"
		android:layout_width="match_parent"
		android:layout_height="3dp"
		app:layout_constraintTop_toBottomOf="@id/toolbar"
		android:background="@drawable/toolbar_dropshadow" />

</androidx.constraintlayout.widget.ConstraintLayout>
