<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/white"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		app:contentInsetStart="0dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<ImageView
				android:id="@+id/iv_back"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_marginStart="12dp"
				android:src="@drawable/ic_back_24"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tv_toolbar_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="36dp"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/iv_back"
				app:layout_constraintTop_toTopOf="parent"
				tools:text="Name" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.appcompat.widget.Toolbar>

	<TextView
		android:id="@+id/tv_connection_unavailable"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/red"
		android:gravity="center"
		android:paddingTop="8dp"
		android:paddingBottom="8dp"
		android:text="@string/connection_unavailable"
		android:textColor="@color/white"
		android:textStyle="bold"
		android:visibility="gone"
		app:layout_constraintTop_toBottomOf="@id/toolbar" />

	<View
		android:id="@+id/toolbar_shadow"
		android:layout_width="match_parent"
		android:layout_height="3dp"
		android:background="@drawable/toolbar_dropshadow"
		app:layout_constraintTop_toBottomOf="@id/toolbar" />

	<ScrollView
		android:id="@+id/rv_users"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:clipToPadding="false"
		android:paddingBottom="12dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_connection_unavailable">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/iv_profile"
				android:layout_width="match_parent"
				android:layout_height="180dp"
				android:layout_margin="8dp"
				android:scaleType="centerCrop"
				android:src="@drawable/placeholder_profile"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tv_followers"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
				android:textStyle="bold"
				app:layout_constraintEnd_toStartOf="@id/tv_following"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/iv_profile"
				tools:text="followers: 121" />

			<TextView
				android:id="@+id/tv_following"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/tv_followers"
				app:layout_constraintTop_toBottomOf="@id/iv_profile"
				tools:text="following: 234" />

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/card_info"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="12dp"
				android:layout_marginTop="12dp"
				android:layout_marginEnd="12dp"
				app:layout_constraintTop_toBottomOf="@id/tv_followers"
				app:strokeColor="@color/black"
				app:strokeWidth="2dp">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="12dp">

					<TextView
						android:id="@+id/tv_name"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:gravity="bottom"
						android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
						android:textStyle="bold"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						tools:text="name: John" />

					<TextView
						android:id="@+id/tv_company"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:gravity="top"
						android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
						android:textStyle="bold"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/tv_name"
						tools:text="company: Apple" />

					<TextView
						android:id="@+id/tv_blog"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:gravity="top"
						android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
						android:textStyle="bold"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/tv_company"
						tools:text="blog: www.apple.com" />

				</androidx.constraintlayout.widget.ConstraintLayout>

			</com.google.android.material.card.MaterialCardView>

			<TextView
				android:id="@+id/tv_notes"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="12dp"
				android:layout_marginTop="24dp"
				android:layout_marginEnd="12dp"
				android:text="@string/notes"
				android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/card_info" />

			<EditText
				android:id="@+id/et_notes"
				android:layout_width="match_parent"
				android:layout_height="140dp"
				android:layout_marginStart="12dp"
				android:layout_marginEnd="12dp"
				android:background="@drawable/bg_et_notes"
				android:gravity="top"
				android:hint="@string/write_something"
				android:padding="8dp"
				android:textSize="14sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_notes" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btn_save"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:backgroundTint="@color/white"
				android:text="@string/save"
				android:textColor="@color/black"
				android:layout_marginTop="16dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/et_notes"
				app:strokeColor="@color/black"
				app:strokeWidth="2dp" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
